# CompMethodsAssignment1

./: .gitignore  README.md  pyproject.toml  requirements.txt
compmethodsassignment1/: homework1.ipynb  homework1.py
