[tool.poetry]
name = "compmethodsassignment1"
version = "0.1.0"
description = ""
authors = ["Nicholas Zolton <nicholaszolton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
statsmodels = "^0.14.2"

[tool.pyright]
venvPath = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
